--- a/FIRSTHTML.HTML
+++ b/FIRSTHTML.HTML
@@ -45,7 +45,7 @@ h2 {
 <body>
 	<h1>VIRTUAL REALITY</h1>
 	<H2>HISTORY, ADVANTAGES, DISADVANTAGES AND APPLICATIONS</H2>
-<a href="file:///C:/Users/admin/Desktop/WEBPAGES/WHATSVR.html" class="button" target="_blank">What Is VR?</a>
+<a href="https://aadhya4231.github.io/virtualworld/WHATSVR.HTML" class="button" target="_blank">What Is VR?</a>
 <a href="http://bafca1a4-3c5e.tiiny.site" class="button" target="_blank">Advantages</a>
 <a href="https://5176c8e1-7a4c.tiiny.site/" class="button" target="_blank">Disadvantages</a>
 <a href="https://8b8df209-9502.tiiny.site/" class="button" target="_blank">Applications</a>
